<resources>
    <string name="app_name">Absen QRCode</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mahasiswa">MAHASISWA</string>
    <string name="nim">NIM</string>
    <string name="logout">Logout</string>
    <string name="nama">Nama</string>
    <string name="qrcode">QRCode</string>
    <string name="absen">Absen</string>
    <string name="input_data_bimbingan">Input Data Bimbingan</string>
    <string name="submit">Submit</string>
    <string name="materi">Materi</string>
    <string name="progres">Progres</string>
    <string name="masalah">Masalah</string>
    <string name="revisi">Revisi</string>
</resources>
